<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="2">

        <ImageView
            android:id="@+id/backbtn"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:background="@drawable/ic_back"
            android:backgroundTint="@color/dark_blue"
            android:layout_margin="20dp"
            android:padding="21dp"/>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_weight="2">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="20dp"
                android:padding="21dp"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="60dp"
                    android:layout_gravity="center"
                    android:src="@drawable/logo" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/login_lbl"
                    android:textAlignment="center"
                    android:layout_gravity="center"
                    android:layout_marginTop="25dp"
                    android:textStyle="normal"
                    android:textColor="@color/grey"
                    android:textSize="@dimen/font_header"/>


                <EditText
                    android:id="@+id/emailtxt"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:background="@drawable/edittxt_rectangle"
                    android:hint="aaa@mail.com"
                    android:textSize="@dimen/font_med"
                    android:textColor="@color/blue"
                    android:maxLines="1"
                    android:padding="15dp"
                    android:layout_marginTop="20dp"
                    android:inputType="textEmailAddress"
                    android:gravity="center_vertical"
                    android:textAlignment="center"
                    android:nextFocusDown="@id/passwordtxt"
                    android:singleLine="true"/>

                <EditText
                    android:id="@+id/passwordtxt"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:background="@drawable/edittxt_rectangle"
                    android:hint="******"
                    android:textSize="@dimen/font_med"
                    android:textColor="@color/blue"
                    android:maxLines="1"
                    android:padding="15dp"
                    android:layout_marginTop="15dp"
                    android:inputType="textPassword"
                    android:gravity="center_vertical"
                    android:textAlignment="center"
                    android:singleLine="true"/>


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/forget_password"
                    android:layout_gravity="right"
                    android:layout_marginTop="10dp"
                    android:textSize="@dimen/font_med"
                    android:textColor="@color/grey"/>

                <Button
                    android:id="@+id/loginbtn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button_blue"
                    android:text="@string/login"
                    android:layout_gravity="center"
                    android:padding="20dp"
                    android:textSize="@dimen/font_med"
                    android:layout_marginTop="20dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:textColor="@color/white"/>


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/signup_f"
                        android:textColor="@color/grey"
                        android:textSize="@dimen/font_med"/>
                    <TextView
                        android:id="@+id/signuptxt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/signup_s"
                        android:textColor="@color/blue"
                        android:layout_marginLeft="5dp"
                        android:textSize="@dimen/font_med"/>

                </LinearLayout>



            </LinearLayout>

        </ScrollView>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:weightSum="6"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/green"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/blue"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/orange"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/red"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/purple"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/light_blue"/>
        </LinearLayout>






    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>